--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <meta charset="UTF-8">
-<title>Jean Phillippe Studio - Link Derivator</title>
+<title>Radio Kermés - Links</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="./style.css">
 <body>
@@ -12,14 +12,14 @@
     <div style="width: 70%;">
           <img src="./logo.png" style="max-width: 100%;float: left;">
     </div>
-    <div style="width: 30%; text-align: right;">
+    <div style="width: 30%; display:none ; text-align: right;">
           <a href="https://wa.me/5492954446203?text=Hola%20Phillippe%21%20Te%20quer%C3%ADa%20hacer%20una%20consulta...."><img src="./whatsapp.png" style="max-width: 20px;opacity:.7;padding:10px 0 5px;"></a><br>
           <a href="https://dribbble.com/jeanphillippe"><img src="./dribbble.png" style="max-width: 20px;opacity:.7;padding:0px 0 5px;"></a>
     </div>
   </div>
   <div class="links">
     <ul>
-      <li><a href="https://jeanphillippe.com" class="link">Sitio Web</a></li>
+      <li><a href="https://radiokermes.com" class="link">Sitio Web</a></li>
       <li><a href="mailto:hello@jeanphillippe.com" class="link">E-mail</a></li>
       <li><a href="https://jeanphillippe.com#portfolio" class="link">Clientes</a></li>
      <li style="color: rgb(255 255 255 / 67%);text-align:center;font-weight: bold;font-size: 0.9em;">Plataformas autoadministrables 👇</li>
