Cambio en el menu

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
           <img src="./logo.png" style="max-width: 100%;float: left;">
     </div>
     <div style="width: 30%; display:none ; text-align: right;">
-          <a href="https://wa.me/5492954446203?text=Hola%20Phillippe%21%20Te%20quer%C3%ADa%20hacer%20una%20consulta...."><img src="./whatsapp.png" style="max-width: 20px;opacity:.7;padding:10px 0 5px;"></a><br>
+          <a href="https://wa.me/5492954337866?text=Hola%20Phillippe%21%20Te%20quer%C3%ADa%20hacer%20una%20consulta...."><img src="./whatsapp.png" style="max-width: 20px;opacity:.7;padding:10px 0 5px;"></a><br>
           <a href="https://dribbble.com/jeanphillippe"><img src="./dribbble.png" style="max-width: 20px;opacity:.7;padding:0px 0 5px;"></a>
     </div>
   </div>
   <div class="links">
     <ul>
       <li><a href="https://radiokermes.com" class="link">Sitio Web</a></li>
-      <li><a href="mailto:hello@jeanphillippe.com" class="link">E-mail</a></li>
-      <li><a href="https://jeanphillippe.com#portfolio" class="link">Clientes</a></li>
+      <li>
+      	<a href="https://radiokermes.com/live" class="link">Escuchá en VIVO</a></li>
+      <li><a href="https://wa.me/5492954337866?text=Hola%20Phillippe%21%20Te%20quer%C3%ADa%20hacer%20una%20consulta...." class="link">WhatsApp</a></li>
      <li style="color: rgb(255 255 255 / 67%);text-align:center;font-weight: bold;font-size: 0.9em;">Plataformas autoadministrables 👇</li>
       <li><a href="https://commpra.com.ar" class="link">Commpra.com.ar<br><small style="font-size:.7em;">Vendé por Internet</small></a></li> <li><a href="https://jaimme.com" class="link">Jaimme.com<br><small style="font-size:.7em;">Administrá tus anuncios fácilmente</small></a></li>
     </ul>
