Se agrego Twitter

--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
   </div>
   <div class="links">
     <ul>
-      <li><a href="https://radiokermes.com" class="link">Sitio Web</a></li>
       <li>
-      	<a href="https://radiokermes.com/live" class="link">Escuchá en VIVO</a></li>
-      <li><a href="https://wa.me/5492954337866?text=Hola%20Phillippe%21%20Te%20quer%C3%ADa%20hacer%20una%20consulta...." class="link">WhatsApp</a></li>
-     <li style="color: rgb(255 255 255 / 67%);text-align:center;font-weight: bold;font-size: 0.9em;">Plataformas autoadministrables 👇</li>
-      <li><a href="https://commpra.com.ar" class="link">Commpra.com.ar<br><small style="font-size:.7em;">Vendé por Internet</small></a></li> <li><a href="https://jaimme.com" class="link">Jaimme.com<br><small style="font-size:.7em;">Administrá tus anuncios fácilmente</small></a></li>
-    </ul>
+      	<a href="https://radiokermes.com" class="link">Sitio Web</a>
+      </li>
+      <li>
+      	<a href="https://radiokermes.com/live" class="link">Escuchá en VIVO</a>
+      </li>
+      <li>
+      	<a href="https://wa.me/5492954337866?text=Hola%20Phillippe%21%20Te%20quer%C3%ADa%20hacer%20una%20consulta...." class="link">WhatsApp</a>
+      </li>
+      <li>
+      	<a href="https://twitter.com/radiokermes" class="link">Twitter</a>
+      </li>
+  </ul>
     <div class="card" style="display:none">
       <h3>Titular</h3>
       <p>Texto</p>
